--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
 
     <string name="Chk_Gasfiter">Gasfiter</string>
     <string name="chk_Electricista">Electricista</string>
+    <string name="title_activity_frm_prueba">frmPrueba</string>
 
 
 </resources>
