--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Cubikate</string>
+    <string name="serverURL">casa</string>
 
     <string name="lbl_TituloAltaUsuario">Alta de Usuarios</string>
     <string name="lbl_TituloAltaMaestros">Alta de Maestros</string>
@@ -32,6 +33,7 @@
     <string name="mainuser_descripcionRequerimiento">Necesidad</string>
     <string name="mainuser_searchInputTextBox">Ingrese su dirección...</string>
     <string name="todo">TODO</string>
+    <string name="title_activity_v_maps_maestros">Map</string>
     <string-array name="mainuser_Especialidad">
         <item>Electrico</item>
         <item>Gasfiter</item>
